--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="check_your_connection">Проверьте своё сетевое подключение</string>
     <string name="unknown_error">Неизвестная ошибка</string>
     <string name="user_with_steamid_not_found">Пользователь с данным SteamId не найден</string>
+    <string name="exit">Выход</string>
 </resources>
