--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="user_with_steamid_not_found">Пользователь с данным SteamId не найден</string>
     <string name="exit">Выход</string>
     <string name="retry">Повторить</string>
+    <string name="get_owned_games_exception_description">Не удается получить список игр. Проверьте настройки приватности Вашего аккаунта</string>
+    <string name="next_game">Дальше</string>
+    <string name="hide_this_game">Больше не показывать эту игру</string>
 </resources>
