--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,9 @@
     <string name="get_owned_games_exception_description">Не удается получить список игр. Проверьте настройки приватности Вашего аккаунта</string>
     <string name="next_game">Дальше</string>
     <string name="hide_this_game">Больше не показывать эту игру</string>
+    <string name="empty_title">Empty data</string>
+    <string name="empty_desription">No data for current filters</string>
+    <string name="error_title">Error</string>
+    <string name="error_description">Something went wrong. Please try again later</string>
+    <string name="you_dont_have_games_yet">У Вас ещё нет игр</string>
 </resources>
