--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="last_sync">Последняя синхронизация: %1$s</string>
     <string name="never">никогда</string>
     <string name="games_sync_failure">Не удалось обновить базу игр</string>
+    <string name="options">Опции</string>
 </resources>
