--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -43,6 +43,8 @@
     <string name="playtime_pref_not_played">Игры, в которые я не играл</string>
     <string name="playtime_pref_max_time">Игры, в которые я играл не более:</string>
     <string name="playtime_hours_label">часа(ов)</string>
+    <string name="coming_soon">Скоро</string>
+    <string name="game_details_description">Описание</string>
     <plurals name="playtime_pref_max_time_full_plurals">
         <item quantity="one">Игры, в которые я играл не более %d часа</item>
         <item quantity="few">Игры, в которые я играл не более %d часов</item>
