--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="game_details_description">Description</string>
     <string name="button_steam_store">Steam store</string>
     <string name="button_community_hub">Community Hub</string>
+    <string name="game_details_languages">Languages</string>
     <plurals name="playtime_pref_max_time_full_plurals">
         <item quantity="zero">Games I played for no more than %d hours</item>
         <item quantity="one">Games I played for no more than %d hour</item>
