--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -46,6 +46,7 @@
     <string name="playtime_hours_label">часа(ов)</string>
     <string name="coming_soon">Скоро</string>
     <string name="game_details_description">Описание</string>
+    <string name="fail_steam_store_info">Не удается получить информацию об игре</string>
     <plurals name="playtime_pref_max_time_full_plurals">
         <item quantity="one">Игры, в которые я играл не более %d часа</item>
         <item quantity="few">Игры, в которые я играл не более %d часов</item>
