--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="error_unknown">Unknown error</string>
     <string name="exit">Exit</string>
     <string name="retry">Retry</string>
-    <string name="error_get_owned_games">Failed to receive your games</string>
+    <string name="error_get_owned_games">Failed to get your games</string>
     <string name="error_get_owned_games_privacy">Your profile is private, please make it public</string>
     <string name="placeholder_empty_title">Empty data</string>
     <string name="placeholder_error_title">Error</string>
@@ -51,6 +51,7 @@
     <string name="button_community_hub">Community Hub</string>
     <string name="game_details_languages">Languages</string>
     <string name="game_details_platforms">Platforms</string>
+    <string name="fail_steam_store_info">Failed to get game information</string>
     <plurals name="playtime_pref_max_time_full_plurals">
         <item quantity="zero">Games I played for no more than %d hours</item>
         <item quantity="one">Games I played for no more than %d hour</item>
