--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -47,6 +47,10 @@
     <string name="coming_soon">Скоро</string>
     <string name="game_details_description">Описание</string>
     <string name="fail_steam_store_info">Не удается получить информацию об игре</string>
+    <string name="button_steam_store">Магазин Steam</string>
+    <string name="button_community_hub">Центр сообщества</string>
+    <string name="game_details_languages">Языки</string>
+    <string name="game_details_platforms">Платформы</string>
     <plurals name="playtime_pref_max_time_full_plurals">
         <item quantity="one">Игры, в которые я играл не более %d часа</item>
         <item quantity="few">Игры, в которые я играл не более %d часов</item>
