--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -51,6 +51,7 @@
     <string name="button_community_hub">Центр сообщества</string>
     <string name="game_details_languages">Языки</string>
     <string name="game_details_platforms">Платформы</string>
+    <string name="system_requirements">Системные требования</string>
     <plurals name="playtime_pref_max_time_full_plurals">
         <item quantity="one">Игры, в которые я играл не более %d часа</item>
         <item quantity="few">Игры, в которые я играл не более %d часов</item>
