hidden games in progress

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     </plurals>
     <string name="system_requirements">System requirements</string>
     <string name="game_description">Description</string>
+    <string name="hidden_games">Hidden games</string>
 </resources>
