hidden games in progress

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,5 +64,5 @@
     <string name="game_description">Description</string>
     <string name="hidden_games">Hidden games</string>
     <string name="clear_all">Clear all</string>
-    <string name="unhide_selected">Unhide selected</string>
+    <string name="make_visible">Make visible</string>
 </resources>
