--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,15 +35,15 @@
     <string name="exit_warning">Are you sure you want to exit?</string>
     <string name="cancel">Cancel</string>
     <string name="dialog_message_reset_hidden_games">Are you sure you want to clear hidden games?</string>
-    <string name="login_screen_help">What can I enter here?</string>
+    <string name="login_screen_help">What should I enter here?</string>
     <string name="supported_steamid_formats">Supported SteamID Formats</string>
     <string name="next_game">Next game</string>
     <string name="hide_game">Hide game</string>
-    <string name="open_game_store_page">Open the page in the store</string>
+    <string name="fab_info_hint">Game info</string>
     <string name="playtime">Show</string>
     <string name="playtime_pref_all">All games</string>
     <string name="playtime_pref_not_played">Games I have not played</string>
-    <string name="playtime_pref_max_time">Games I played for no more than:</string>
+    <string name="playtime_pref_max_time">Games I have played for no more than:</string>
     <string name="playtime_hours_label">hour(s)</string>
     <string name="coming_soon">Coming soon</string>
     <string name="game_details_description">Description</string>
@@ -63,6 +63,6 @@
     <string name="system_requirements">System requirements</string>
     <string name="game_description">Description</string>
     <string name="hidden_games">Hidden games</string>
-    <string name="clear_all">Clear all</string>
+    <string name="make_all_games_visible">Make all visible</string>
     <string name="make_visible">Make visible</string>
 </resources>
