--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,5 @@
     <string name="make_visible">Make visible</string>
     <string name="about_app">About</string>
     <string name="show_app_source_code">Source code</string>
+    <string name="open_source_libraries">Open Source Libraries</string>
 </resources>
