--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -65,4 +65,5 @@
     <string name="about_app">О приложении</string>
     <string name="show_app_source_code">Исходный код</string>
     <string name="open_source_libraries">Библиотеки с открытым исходным кодом</string>
+    <string name="privacy_policy">Политика конфиденциальности</string>
 </resources>
