--- a/app/src/debug/res/values/strings.xml
+++ b/app/src/debug/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false">[DEBUG] Steam Shuffle</string>
+    <string name="app_name" translatable="false">Steam Shuffle [DEBUG]</string>
 </resources>
