--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
     <string name="fab_info_hint">Game info</string>r
     <string name="playtime">Show</string>
     <string name="playtime_pref_all">All games</string>
-    <string name="playtime_pref_not_played">Games I haven\'t played</string>
+    <string name="playtime_pref_not_played">Games I\'ve not played</string>
     <string name="playtime_pref_max_time">Games I\'ve played for no more than:</string>
     <string name="playtime_hours_label">hour(s)</string>
     <string name="coming_soon">Coming soon</string>
@@ -51,7 +51,7 @@
     <string name="button_community_hub">Community Hub</string>
     <string name="game_details_languages">Languages</string>
     <string name="game_details_platforms">Platforms</string>
-    <string name="fail_steam_store_info">Failed to get game information</string>
+    <string name="fail_steam_store_info">Steam Store info isn\'t available for this game</string>
     <plurals name="playtime_pref_max_time_full_plurals">
         <item quantity="zero">Games I played for no more than %d hours</item>
         <item quantity="one">Games I played for no more than %d hour</item>
