--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
         <item quantity="other">You have %d games</item>
     </plurals>
     <string name="games_last_sync">Last sync: %1$s</string>
-    <string name="never">never</string>
+    <string name="last_sync_never">never</string>
     <string name="roulette_options">Options</string>
     <string name="btn_reset_hidden_games">Clear</string>
     <string name="hidden_games_count">Hidden games</string>
@@ -69,4 +69,9 @@
     <string name="show_app_source_code">Source code</string>
     <string name="open_source_libraries">Open Source Libraries</string>
     <string name="privacy_policy">Privacy policy</string>
+    <string name="rate">Rate</string>
+    <string name="never">Never</string>
+    <string name="later">Later</string>
+    <string name="rate_app_title">Rate Steam Shuffle</string>
+    <string name="rate_app_dialog_message">Hello. It seems like you are enjoying Steam Shuffle. Please take a moment to rate it. It won\'t take more than a minute. Thanks for your support!</string>
 </resources>
