--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,4 +76,6 @@
     <string name="rate_app_dialog_message">Hello. It seems like you are enjoying Steam Shuffle. Please take a moment to rate it. It won\'t take more than a minute. Thanks for your support!</string>
     <string name="my_steam_library">My games</string>
     <string name="action_search">Search</string>
+    <string name="clear_filters">Reset</string>
+    <string name="only_hidden">Hidden games</string>
 </resources>
