--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -41,8 +41,22 @@
     <string name="fab_info_hint">Информация об игре</string>
     <string name="playtime">Показывать</string>
     <string name="playtime_pref_all">Все игры</string>
-    <string name="playtime_pref_not_played">Игры, в которые я не играл</string>
-    <string name="playtime_pref_max_time">Игры, в которые я играл не более:</string>
+    <string name="playtime_pref_not_played">Игры, в которые я не играл(а)</string>
+    <string name="playtime_pref_max_time">Игры, в которые я играл(а) не более:</string>
+    <plurals name="playtime_pref_max_time_plurals">
+        <item quantity="one">Игры, в которые я играл(а) не более %d часа</item>
+        <item quantity="few">Игры, в которые я играл(а) не более %d часов</item>
+        <item quantity="many">Игры, в которые я играл(а) не более %d часов</item>
+        <item quantity="other">Игры, в которые я играл(а) не более %d часов</item>
+    </plurals>
+    <string name="playtime_pref_all_short">Все</string>
+    <string name="playtime_pref_not_played_short">Не играл(а)</string>
+    <plurals name="playtime_pref_max_time_plurals_short">
+        <item quantity="one">Играл(а) не более %d часа</item>
+        <item quantity="few">Играл(а) не более %d часов</item>
+        <item quantity="many">Играл(а) не более %d часов</item>
+        <item quantity="other">Играл(а) не более %d часов</item>
+    </plurals>
     <string name="playtime_hours_label">часа(ов)</string>
     <string name="coming_soon">Скоро</string>
     <string name="game_details_description">Описание</string>
@@ -52,12 +66,6 @@
     <string name="game_details_languages">Языки</string>
     <string name="game_details_platforms">Платформы</string>
     <string name="system_requirements">Системные требования</string>
-    <plurals name="playtime_pref_max_time_full_plurals">
-        <item quantity="one">Игры, в которые я играл не более %d часа</item>
-        <item quantity="few">Игры, в которые я играл не более %d часов</item>
-        <item quantity="many">Игры, в которые я играл не более %d часов</item>
-        <item quantity="other">Игры, в которые я играл не более %d часов</item>
-    </plurals>
     <string name="game_description">Описание</string>
     <string name="hidden_games">Скрытые игры</string>
     <string name="make_all_games_visible">Сделать все видимыми</string>
@@ -76,4 +84,6 @@
     <string name="you_have_n_games">У вас %1$s на аккаунте</string>
     <string name="clear_filters">Очистить</string>
     <string name="only_hidden">Скрытые игры</string>
+    <string name="change_scale">Изменить масштаб</string>
+    <string name="library_search_hint">Название игры</string>
 </resources>
